# nova

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  _2home_2runner_2work_2nova_2nova_2include_2brezel_2tensor_2detail_2tensor_expression_8hpp-example.html  _2home_2runner_2work_2nova_2nova_2include_2brezel_2tensor_2detail_2tensor_iterator_8hpp-example.html  _2home_2runner_2work_2nova_2nova_2include_2brezel_2tensor_2detail_2tensor_utils_8hpp-example.html  _2home_2runner_2work_2nova_2nova_2include_2brezel_2tensor_2tensor_impl_8hpp-example.html  activations_8hpp_source.html  allocator_8hpp_source.html  annotated.html  autograd_8hpp_source.html  basic__ops_8hpp_source.html  broadcasting_8hpp_source.html  classbrezel_1_1autograd_1_1AddFunction-members.html  classbrezel_1_1autograd_1_1AddFunction.html  classbrezel_1_1autograd_1_1AddFunction__coll__graph.map  classbrezel_1_1autograd_1_1AddFunction__coll__graph.md5  classbrezel_1_1autograd_1_1AddFunction__inherit__graph.map  classbrezel_1_1autograd_1_1AddFunction__inherit__graph.md5  classbrezel_1_1autograd_1_1ELUFunction-members.html  classbrezel_1_1autograd_1_1ELUFunction.html  classbrezel_1_1autograd_1_1ELUFunction__coll__graph.map  classbrezel_1_1autograd_1_1ELUFunction__coll__graph.md5  classbrezel_1_1autograd_1_1ELUFunction__inherit__graph.map  classbrezel_1_1autograd_1_1ELUFunction__inherit__graph.md5  classbrezel_1_1autograd_1_1GradFunction-members.html  classbrezel_1_1autograd_1_1GradFunction.html  classbrezel_1_1autograd_1_1GradFunctionImpl-members.html  classbrezel_1_1autograd_1_1GradFunctionImpl.html  classbrezel_1_1autograd_1_1GradFunctionImpl__coll__graph.map  classbrezel_1_1autograd_1_1GradFunctionImpl__coll__graph.md5  classbrezel_1_1autograd_1_1GradFunctionImpl__inherit__graph.map  classbrezel_1_1autograd_1_1GradFunctionImpl__inherit__graph.md5  classbrezel_1_1autograd_1_1GradFunction__coll__graph.map  classbrezel_1_1autograd_1_1GradFunction__coll__graph.md5  classbrezel_1_1autograd_1_1GradFunction__inherit__graph.map  classbrezel_1_1autograd_1_1GradFunction__inherit__graph.md5  classbrezel_1_1autograd_1_1LeakyReLUFunction-members.html  (+518 more)
.github/: dependabot.yml
.github/workflows/: ci.yaml  ci.yml  codeql.yml  docs.yml  release.yml
cmake/: CompilerFlags.cmake  Config.cmake.in  Dependencies.cmake  FindMKL.cmake  Functions.cmake  NovaConfig.cmake.in  Options.cmake
docs/: CMakeLists.txt  Doxyfile.in
docs/theme/: custom.css  footer.html  header.html
include/: CMakeLists.txt
include/brezel/autograd/: autograd.hpp  context.hpp  function.hpp  node.hpp  op_type.hpp  variable.hpp
include/brezel/autograd/functions/: activations.hpp  basic_ops.hpp  factory.hpp  reductions.hpp
include/brezel/core/: device.hpp  error.hpp  macros.hpp  shape.hpp  tensor.hpp  version.hpp.in
include/brezel/core/error/: error.hpp  error_category.hpp  error_code.hpp  error_fwd.hpp
include/brezel/core/status/: status.hpp
include/brezel/math/: optimized_math.hpp
include/brezel/tensor/: layout.hpp  memory_manager.hpp  shape.hpp  storage.hpp  strides.hpp  tensor.hpp  tensor_concept.hpp  tensor_expressions.hpp  tensor_factory.hpp  tensor_impl.hpp  tensor_math.hpp  tensor_simd.hpp  view.hpp
include/brezel/tensor/detail/: tensor_base.hpp  tensor_concept.hpp  tensor_expression.hpp  tensor_iterator.hpp  tensor_storage.hpp  tensor_utils.hpp
include/brezel/tensor/io/: format.hpp  serialization.hpp
include/brezel/tensor/parallel/: parallel_for.hpp  task_system.hpp  thread_pool.hpp
include/brezel/tensor/shape/: broadcasting.hpp  shape.hpp  strides.hpp
include/brezel/tensor/storage/: allocator.hpp  memory_pool.hpp  shared_storage.hpp  storage.hpp
include/brezel/tensor/utils/: dispatch.hpp  error_handling.hpp  type_traits.hpp
include/brezel/utils/logger/: logger.hpp
include/nova/core/: error.hpp  macros.hpp  shape.hpp
scripts/: build.sh  format.sh  run.sh  test.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  concepts_0.js  enums_0.js  enums_1.js  (+39 more)
src/: CMakeLists.txt
src/core/: error.cpp
src/utils/: logger.cpp
test_results/: shape_test_output.txt
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  autograd_test.cpp  error_category_test.cpp  error_code_test.cpp  error_test.cpp  layout_test.cpp  memory_manager_test.cpp  optimized_math_test.cpp  shape_test.cpp  shape_tests.cpp  storage_test.cpp  strides_test.cpp  tensor_concept_test.cpp  tensor_expression_test.cpp  tensor_test.cpp
